apps/jayne-martin-counselling/service-default-jayne-martin-counselling.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jayne-martin-counselling
    environment: production
  name: jayne-martin-counselling
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: jayne-martin-counselling
  sessionAffinity: None
  type: ClusterIP
